--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.1
+  shared_preferences: ^2.0.15
+  hexcolor: ^3.0.1
+  bottom_navy_bar: ^6.0.0
+  font_awesome_flutter: ^10.3.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -75,6 +81,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Metropolis
+      fonts:
+        - asset: assets/fonts/Metropolis-Black.ttf
+          weight: 900
+        - asset: assets/fonts/Metropolis-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Metropolis-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Metropolis-Regular.ttf
+          weight: 400
   # fonts:
   #   - family: Schyler
   #     fonts:
