--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   hexcolor: ^3.0.1
   bottom_navy_bar: ^6.0.0
   font_awesome_flutter: ^10.3.0
+  carousel_slider: ^4.2.0
 
 
 
@@ -66,6 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/images/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
