--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   bottom_navy_bar: ^6.0.0
   font_awesome_flutter: ^10.3.0
   carousel_slider: ^4.2.0
+  dio: ^4.0.6
+  image_picker: ^0.8.6
+
 
 
 
